Created Student Controller to accept client requests and wrote GET function